done with searchview

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,39 +2,70 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_content"
+    android:id="@+id/activity_list_photo_main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.example.beretta.owoxgallary.ui.list.ImageListActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
+        android:id="@+id/activity_list_photo_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/appbar_padding_top"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.SearchView
-            android:id="@+id/images_search"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/activity_list_photo_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.Toolbar>
+
+        <!--<android.support.v7.widget.SearchView-->
+            <!--android:id="@+id/activity_list_photo_images_search"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content" />-->
 
 
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh"
+        android:id="@+id/activity_list_photo_swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/appbar">
+        android:layout_below="@id/activity_list_photo_appbar">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/images_list"
+            android:id="@+id/activity_list_photo_images_list_recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </android.support.v7.widget.RecyclerView>
+            android:layout_height="match_parent" />
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <RelativeLayout
+        android:visibility="gone"
+        android:layout_below="@id/activity_list_photo_appbar"
+        android:id="@+id/activity_list_photo_empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true">
+
+        <TextView
+            android:layout_centerInParent="true"
+            android:id="@+id/activity_list_photo_empty_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/empty_list" />
+
+        <Button
+            android:id="@+id/activity_list_photo_try_again_bth"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/activity_list_photo_empty_text"
+            android:layout_centerHorizontal="true"
+            android:text="@string/try_again" />
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
