--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_list_photo_main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primary_dark"
     android:fitsSystemWindows="true"
     tools:context="com.example.beretta.owoxgallary.ui.list.ImageListActivity">
 
@@ -54,9 +54,11 @@
             android:id="@+id/activity_list_photo_empty_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="@string/empty_list" />
 
         <Button
+            android:layout_marginTop="@dimen/fab_margin"
             android:id="@+id/activity_list_photo_try_again_bth"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
