--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
 
     <color name="image_without_palette">#1C1D23</color>
     <color name="text_without_palette">#ffeae1da</color>
+    <color name="white">#fff</color>
 </resources>
