--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_list_photo_main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,63 +9,49 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.beretta.owoxgallary.ui.list.ImageListActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/activity_list_photo_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/appbar_padding_top"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/activity_list_photo_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </android.support.v7.widget.Toolbar>
-
-        <!--<android.support.v7.widget.SearchView-->
-            <!--android:id="@+id/activity_list_photo_images_search"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content" />-->
+        />
 
 
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/activity_list_photo_swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/activity_list_photo_appbar">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/activity_list_photo_images_list_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <RelativeLayout
-        android:visibility="gone"
-        android:layout_below="@id/activity_list_photo_appbar"
         android:id="@+id/activity_list_photo_empty_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true">
+        android:layout_below="@id/activity_list_photo_appbar"
+        android:layout_centerInParent="true"
+        android:visibility="gone">
 
-        <TextView
-            android:layout_centerInParent="true"
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/activity_list_photo_empty_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="@string/empty_list" />
+            android:layout_centerInParent="true"
+            android:text="@string/empty_list"
+            android:textColor="@color/white" />
 
-        <Button
-            android:layout_marginTop="@dimen/fab_margin"
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/activity_list_photo_try_again_bth"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/activity_list_photo_empty_text"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/fab_margin"
             android:text="@string/try_again" />
 
     </RelativeLayout>
